Home page ready

--- a/src/pages/home-page.component/home-page.component.html
+++ b/src/pages/home-page.component/home-page.component.html
@@ -1,5 +1,13 @@
-<app-header></app-header>
-<app-hero-section></app-hero-section>
-<app-counter-section></app-counter-section>
-<app-download-brochure></app-download-brochure>
-<app-introductory-section></app-introductory-section>
+<div class="bg-white">
+  <app-header></app-header>
+  <app-hero-section></app-hero-section>
+  <app-counter-section></app-counter-section>
+  <app-download-brochure></app-download-brochure>
+  <app-introductory-section></app-introductory-section>
+  <app-services-section></app-services-section>
+  <app-our-clients></app-our-clients>
+  <app-testimonials></app-testimonials>
+  <app-follow-us-section></app-follow-us-section>
+  <app-address-mapping-section></app-address-mapping-section>
+  <app-footer></app-footer>
+</div>
