--- a/src/component/counter-section/counter-section.html
+++ b/src/component/counter-section/counter-section.html
@@ -1,4 +1,4 @@
-<section data-bs-version="5.1" class="counter1 counters cid-uQfKlxkLEv" id="counter1-22">
+<!-- <section data-bs-version="5.1" class="counter1 counters cid-uQfKlxkLEv" id="counter1-22">
   <div class="container">
     <div class="row content-row mt-4">
       <div
@@ -21,4 +21,4 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
